--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "~2.0.1",
     "body-parser": "~1.15.1",
+    "connect-mongo": "~1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
+    "ejs-locals-vadorequest": "^2.0.2",
+    "ejs-mate": "^2.3.0",
     "express": "~4.13.4",
+    "express-helpers": "~1.3.2",
+    "express-session": "~1.14.1",
+    "mongodb": "~2.2.10",
+    "mongoose": "~4.6.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "nconf" : "~0.8.4",
-    "sqlite3": "~3.1.4",
-    "nw-gyp":"~3.4.0",
-    "sequelize":"~3.24.2"
+    "nconf": "~0.8.4",
+    "nw-gyp": "~3.4.0",
+    "sequelize": "~3.24.2",
+    "serve-favicon": "~2.3.0"
   }
 }
